css/responsive-and-slider.css
/* ... */
  .footer .container{
    padding: 0px 15px;
  }
  .footer .copy-right{
    margin-bottom: 0px;
  }
  .slider-container-new {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .slider2 {
    position: relative;
    height: 300px; 
    overflow-y: auto;
    scrollbar-width: none;
    -ms-overflow-style: none; 
  }
  .slider2::-webkit-scrollbar {
    width: 0;
    height: 0;
  }
  .slide2 {
    height: 100%; 
    scroll-snap-align: start; 
    padding: 20px;
    transition: all 2s ease-in;
  }
  .lines2 {
    position: absolute;
    right: 0;
    width: 3px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    cursor: pointer;
  }
  .line2 {
    width: 100%;
    height: 31px;
    background-color: #ccc;
    transition: background-color 0.3s ease-in-out;
    background: transparent linear-gradient(180deg, #EE0D73 0%, #FE6308 100%) 0% 0% no-repeat padding-box;
    opacity: .2;
    margin-top: 10px;
  
  }
  .line2.active {
    opacity: 1;
  }
  .slide2 h2 {
    font-size: 24px;
    margin-bottom: 10px;
  }
  .abouttop-slider{
    padding-left: 40px;
    padding-right: 40px;
  }
  .scrollbehave4 {
    height: 500px;
  }
  .slider-container-new2 {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
  }
  .slider22 {
    position: relative;
    height: 300px; 
    overflow-y: auto;
    scrollbar-width: none;
    -ms-overflow-style: none; 
  }
  .slider22::-webkit-scrollbar {
    width: 0;
    height: 0;
  }
  .slide22 {
    height: 100%; 
    scroll-snap-align: start; 
    padding: 20px;
    transition: all 2s ease-in;
  }
  .lines22 {
    position: absolute;
    right: 0;
    width: 3px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    cursor: pointer;
  }
  .line22 {
    width: 100%;
    height: 31px;
    background-color: #ccc;
    transition: background-color 0.3s ease-in-out;
    background: transparent linear-gradient(180deg, #EE0D73 0%, #FE6308 100%) 0% 0% no-repeat padding-box;
    opacity: .2;
    margin-top: 10px;
  }
  .line22.active {
    opacity: 1;
  }
  .max-width-cont {
    height: 600px;
  }
  .img-slider-show-container{
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  @media screen and (max-width: 670px) {
    .slider-mobil-res{
      margin-top: 20px;
      margin-bottom: 30px;
    }
    .content-slider {
      margin-bottom: 80px;
  }
  .mob-sli-2{
    margin-top: 0px;
    height: auto!important;
  }
  .slide{
    padding: 0px;
  }
  .feature-cont {
    margin-top: 0;
    border-radius: 0px;
}
.aiassist-bg {
  height: auto;
  margin-top: 10px;
  margin-bottom: 20px;
  max-width: 100%;
}
.book-a-demo {
  padding: 68px 20px;
  background: transparent linear-gradient(269deg, #fef7e042 0%, #fef7e0 52%, #fef7e033 100%) 0% 0% no-repeat padding-box;
  margin-bottom: 30px;
}
.feature-hero-content {
  color: white;
  position: absolute;
  pointer-events: none;
  top: 0;
  bottom: 3px;
  left: 0;
  right: 0;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-radius: 20px;
  background-color: #0000007d;
  padding: 10px!important;
}
.feature-hero-content h2 {
  font: normal normal 800 28px / 36px Poppins;
  letter-spacing: 0px;
  color: #f0f0f0;
  margin-bottom: 5px;
  max-width: 550px;
  margin: 5px auto;
}
.slideimg {
      
  margin-bottom: 15px;
}
  }
  @media screen and (max-width: 390px) {
    .hero-bg {
        height: 43%;
        width: auto;
        position: absolute;
        right: 0;
        top: unset;
        bottom: 0px;
        max-width: max-content;
    }
    #shape-1, #shape-2, #shape-3 {
      min-width: 80px;
      height: 90px;
     
  }
  .footer .col-md-6{
    padding: 0px;
  }
  
  }

  @media screen and (min-width: 1500px) {
    .container{
      width: 1400px;
    }
;.header{
max-width: 1430px;
    }
  }

